kyverno-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged
